@@ -716,9 +716,23 @@ namespace tgui
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+    void Widget::setFocusable(bool focusable)
+    {
+        m_focusable = focusable;
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+    bool Widget::isFocusable() const
+    {
+        return m_focusable;
+    }
+
+    /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
     bool Widget::canGainFocus() const
     {
-        return m_enabled && m_visible;
+        return m_enabled && m_visible && m_focusable;
     }
 
     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
